--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
    <button id="sim" >Sim 😁</button>
     </a>
 <button id="fugitive-button">Não 😢</button>
-<details style="margin-top: 100px;">
-  nao clica aqui<iframe width="560" height="315" src="https://www.youtube.com/embed/sUbIEoAFGoQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<details style="margin-top: 100px;"> <summary>
+  NÃO CLIQUE AQUI
+</summary>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/sUbIEoAFGoQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </details>
 <div style="height: 80px;">
 
